<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:ellipsize="start"
        android:gravity="end"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColor="@color/textColor"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:gravity="end"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                style="@style/NumberButtonStyle"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/tvEight"
                style="@style/NumberButtonStyle"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/tvNine"
                style="@style/NumberButtonStyle"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/tvMul"
                style="@style/ActionButtonStyle"
                android:text="@string/multiplication"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvFour"
                style="@style/NumberButtonStyle"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/tvFive"
                style="@style/NumberButtonStyle"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/tvSix"
                style="@style/NumberButtonStyle"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/tvMinus"
                style="@style/ActionButtonStyle"
                android:text="@string/subtraction"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                style="@style/NumberButtonStyle"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/tvTwo"
                style="@style/NumberButtonStyle"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/tvThree"
                style="@style/NumberButtonStyle"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/tvPlus"
                style="@style/ActionButtonStyle"
                android:text="@string/addition"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvClear"
                style="@style/ActionButtonStyle"
                android:background="@color/redColor"
                android:text="@string/ce"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvZero"
                style="@style/NumberButtonStyle"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/tvEquals"
                style="@style/ActionButtonStyle"
                android:background="@color/greenColor"
                android:text="@string/equal"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvDivide"
                style="@style/ActionButtonStyle"
                android:text="@string/divide"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>