<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:baselineAligned="false"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="2dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorSignInButton"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserLoginID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:hint="@string/user_id"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                app:passwordToggleDrawable="@drawable/password_visibility_icon_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="25dp"
                android:background="@color/colorSignInButton"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>